discussion/kv_engine/177001/177001_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move throttle_test to its own test suite

Change-Id: Ic55623bb6a5c7fd4e7ab87fb391d1c9cb1e29057

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:22:56.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:30:15.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47305/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47305/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39757/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39757/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8216/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8216/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8315/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8315/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20429/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20429/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20777/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20777/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21417/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21417/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28810/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28810/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19651/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19651/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18545/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13: error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
    std::vector<std::thread> threads;
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:30: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    std::vector<std::thread> threads;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:61:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
                std::thread{[func, name = "bucket-" + std::to_string(ii)]() {
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18545/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13:
error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18545/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17696/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
